fix focus color contrast on tabs

--- a/src/css/cooling-center.css
+++ b/src/css/cooling-center.css
@@ -32,3 +32,7 @@
   background-color: #0B71D0;
   color: var(--color-light);
 }
+.tabs button.btn.active:focus, .tabs button.btn.active:focus * {
+  background-color: var(--focus-ring-color);
+  color: black;
+}
